--- a/react-boilerplate/src/assets/scss/app.scss
+++ b/react-boilerplate/src/assets/scss/app.scss
@@ -1,4 +1,7 @@
 @import "./components/common/navHeader.scss";
+@import "./pages/openPage.scss";
+@import "./pages/layout01.scss";
+@import "./pages/layout02.scss";
 .app{
   background: $background-color;
   display:flex; 
@@ -6,4 +9,5 @@
   min-height: 100dvh;
   padding:1rem;
   color: $white-color;
+
 }
