--- a/react-boilerplate/src/assets/scss/index.scss
+++ b/react-boilerplate/src/assets/scss/index.scss
@@ -6,13 +6,13 @@ body {
   font-family: "pretendard,'맑은 고딕','Malgun Gothic',돋움,Dotum,'Apple SD Gothic Neo',sans-serif";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size:14px;
+  font-size: 14px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-.start-message{
+.start-message {
   font-size: 0.9rem;
 }
