lint, vite, tsconfig 수정.
# Lint : 규칙, extends, parserOption 추가.
# Tsconfig : noImplicitAny 추가, include src경로 수정.
# Viteconfig : 공통으로 사용될 theme파일 전역 사용되게 설정 추가.

--- a/react-boilerplate/src/assets/scss/app.scss
+++ b/react-boilerplate/src/assets/scss/app.scss
@@ -2,11 +2,12 @@
 @import "./pages/openPage.scss";
 @import "./pages/layout01.scss";
 @import "./pages/layout02.scss";
+
 .app {
-  background: $background-color;
+  background: theme.$background-color;
   display: flex;
   flex-direction: column;
   min-height: 100dvh;
   padding: 1rem;
-  color: $white-color;
+  color: theme.$white-color;
 }
