--- a/react-boilerplate/src/assets/scss/theme.scss
+++ b/react-boilerplate/src/assets/scss/theme.scss
@@ -1,6 +1,6 @@
 $background-color: #282c34;
-$bright-point-color: #E0BBFF;
-$point-color: #C299FF;
-$dark-point-color: #A067D3;
+$bright-point-color: #e0bbff;
+$point-color: #c299ff;
+$dark-point-color: #a067d3;
 $white-color: #ffffff;
 $black-color: #000000;
